syntax = "proto3";
package im_service;

//  接口
service im {
    rpc NewMsg (stream MsgModel) returns (stream MsgModel);
}
message MsgModel {
    uint32 gate_id = 1;
    uint32 uid = 2;
    uint64 msg_id = 3;
    uint32 msg_type = 4;
    string msg_content = 5;
}